# learn-agents

./: .gitignore  CLAUDE.md  Justfile  README.md
budo/: pyproject.toml
budo/budo/: __init__.py  __main__.py
budo/budo/core/: audit.py  log.py  loop.py  obs.py  provider.py  usage.py
budo/budo/tools/: k8s.py
labs/ch00-dojo/: Justfile  kind-config.yaml  phoenix.yaml  prometheus-values.yaml  smoke_test.py
labs/ch01-naked-loop/: Justfile
labs/ch01-naked-loop/chaos/: checkout-bad-env.sh  dns-blackhole.yaml
labs/ch01-naked-loop/checks/: check.py  solve.py
labs/ch01-naked-loop/starter/: README.md  loop_skeleton.py
labs/ch02-iac/: README.md
labs/ch02-skills/: Justfile  README.md
labs/ch02-skills/checks/: check.py  solve.py
labs/ch02-skills/skills/: README.md  crashloop.md  dns-failure.md  endpoints-empty.md  env-typo.md  imagepullbackoff.md  oomkilled.md  pending-pod.md  probe-failure.md  rollout-stuck.md  service-topology.md
labs/ch02-skills/solutions/: k8s_solved.py  main_solved.py  skills_solved.py
labs/ch03-cicd/: README.md
labs/ch04-observability/: README.md
labs/ch05-oncall/: README.md
labs/ch06-scale/: README.md
labs/ch07-cost/: README.md
labs/ch08-security/: README.md
labs/ch09-capstone/: README.md
labs/warmup-llm-client/: Justfile
labs/warmup-llm-client/starter/: README.md  parse_test.py  provider_skeleton.py
site/: astro.config.mjs  package-lock.json  package.json
site/src/content/docs/: appendix-local-models.md  ch00-dojo.md  ch01-naked-loop.md  ch02-iac.md  ch02-skills.md  ch03-cicd.md  (+9 more)
site/src/styles/: custom.css
