[project]
name = "budo"
version = "0.1.0"
description = "The evolving SRE agent CLI from srebudo.ai — white belt and climbing."
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[project.scripts]
budo = "budo.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
